2.deploy-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deply
  namespace: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
      - name: react-con
        image: choheewon00/front_site:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
